rust_writer_procedural/tests/ui/mutator_fails_if_crate_implementor_doesnt_implement_to_mutate.rs
// SPDX-License-Identifier: GPL-3.0

use rust_writer::ast::{
	implementors::ItemToImpl,
	mutator::{EmptyMutator, ToMutate},
};
use rust_writer_procedural::mutator;
use syn::visit_mut::VisitMut;

#[mutator(ItemToImpl<'a>, EmptyMutator)]
struct SomeStruct;

fn main() {}
